Made my own. on Atom.

--- a/src/data/footer.yml
+++ b/src/data/footer.yml
@@ -10,6 +10,6 @@ social_icons:
     url: '#'
 copyright: '&copy; Untitled.'
 links:
-  - text: Made with Stackbit
+  - text: Made with Stackbit (Sai)
     url: 'https://www.stackbit.com'
     new_window: true
